# SiteLayout

./: .env.example  .eslintrc.json  .gitignore  PRD.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: .env.example  .eslintrc.json  Dockerfile  Dockerfile.prod  package.json  tsconfig.json  vitest.config.ts
backend/prisma/: schema.prisma
backend/python/: Dockerfile  pyproject.toml  requirements.txt
backend/python/src/: __init__.py  main.py
backend/python/src/api/: __init__.py  app.py  routes.py
backend/python/src/carbon/: __init__.py  calculator.py  models.py
backend/python/src/earthwork/: __init__.py  calculator.py  models.py
backend/python/src/export/: __init__.py
backend/python/src/habitat/: __init__.py  models.py  services.py
backend/python/src/optimization/: __init__.py  genetic_optimizer.py  models.py
backend/python/src/parsers/: __init__.py  dxf_parser.py
backend/python/src/reports/: __init__.py  generator.py  models.py
backend/python/src/roads/: __init__.py  pathfinding.py
backend/python/src/terrain/: __init__.py  analysis.py  dem_generator.py
backend/python/tests/: test_placeholder.py
backend/src/: index.ts
backend/src/auth/: index.ts  jwt.ts  oauth.ts
backend/src/controllers/: asset.ts  auth.ts  constraint.ts  entryPoint.ts  exclusionZone.ts  export.ts  habitat.ts  layout.ts  project.ts  road.ts  site.ts  upload.ts
backend/src/middleware/: auth.ts  (+1 more)
frontend/: .env.example  Dockerfile  nginx.conf  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css
infrastructure/terraform/: main.tf  outputs.tf  provider.tf  variables.tf
shared/: package.json  tsconfig.json
shared/types/: index.ts
(+150 files in other folders)
